# mdtick

./: .gitignore  README.md  dashboard.py  mdtick.py  projects.txt  pyproject.toml  scan.py  trackdash.py
archive/: dashboard.py  richdash.py  richdash2.py
md_dashboard/: cli.py  dashboard.py
md_dashboard/templates/: dashboard.html  style.css
